--- a/assets/styles/sass/2-layouts/_blogs.sass
+++ b/assets/styles/sass/2-layouts/_blogs.sass
@@ -3,9 +3,6 @@
 .blogs
   padding-bottom: 110px
 
-  .col-md-4
-    padding: 0
-
   .section-heading
     margin: 110px auto 45px
 
