--- a/assets/styles/sass/3-modules/_blogs.sass
+++ b/assets/styles/sass/3-modules/_blogs.sass
@@ -5,10 +5,6 @@
 /*___Blog Link: Large___*/
 .blogs
 
-  .col-md-4
-    max-width: 31%
-    margin: 0 13px
-
   .blog-img
     +dimensions( 380px, 240px )
     width: 100%
@@ -44,6 +40,7 @@
   .blog-details
     color: $black
     margin-top: -55px
+    max-width: 380px
 
     a
       font-size: 15px
@@ -77,6 +74,41 @@
 
 
 
+@media only screen and (max-width: 991px)
+
+  .blogs
+
+    .blog-img,
+    .blog-details
+      display: block
+      margin-left: auto
+      margin-right: auto
+    
+    .blog-details
+      margin-bottom: 48px
+
+    
+    .blog-date
+      left: 145px
+
+
+
+@media only screen and (max-width: 767px)
+
+  .blogs
+
+    .blog-date
+      left: 56px
+
+
+
+@media only screen and (max-width: 575px)
+
+  .blogs
+
+    .blog-date
+      left: 10%
+
 
 /*___Blog Link: Small___*/
 
@@ -96,3 +128,5 @@
 
       &:hover
         text-decoration: underline
+
+    
